@@ -1,0 +1,38 @@
+/*****************************************************************
+ *   Licensed to the Apache Software Foundation (ASF) under one
+ *  or more contributor license agreements.  See the NOTICE file
+ *  distributed with this work for additional information
+ *  regarding copyright ownership.  The ASF licenses this file
+ *  to you under the Apache License, Version 2.0 (the
+ *  "License"); you may not use this file except in compliance
+ *  with the License.  You may obtain a copy of the License at
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing,
+ *  software distributed under the License is distributed on an
+ *  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ *  KIND, either express or implied.  See the License for the
+ *  specific language governing permissions and limitations
+ *  under the License.
+ ****************************************************************/
+package org.apache.cayenne.tx;
+
+import org.apache.cayenne.configuration.CayenneRuntime;
+
+/**
+ * An optional utility service that simplifies wrapping multiple operations in
+ * transactions. Users only rarely need to invoke it directly, as all standard
+ * Cayenne operations are managing their own transactions internally.
+ * 
+ * @since 3.2
+ */
+public interface TransactionManager {
+
+    /**
+     * Starts a new transaction (or joins an existing one) calling
+     * {@link TransactionalOperation#perform(CayenneRuntime)}, and then
+     * committing or rolling back the transaction. Frees the user
+     */
+    <T> T performInTransaction(TransactionalOperation<T> op);
+}
