@@ -1,0 +1,70 @@
+/*****************************************************************
+ *   Licensed to the Apache Software Foundation (ASF) under one
+ *  or more contributor license agreements.  See the NOTICE file
+ *  distributed with this work for additional information
+ *  regarding copyright ownership.  The ASF licenses this file
+ *  to you under the Apache License, Version 2.0 (the
+ *  "License"); you may not use this file except in compliance
+ *  with the License.  You may obtain a copy of the License at
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing,
+ *  software distributed under the License is distributed on an
+ *  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ *  KIND, either express or implied.  See the License for the
+ *  specific language governing permissions and limitations
+ *  under the License.
+ ****************************************************************/
+package org.apache.cayenne.tx;
+
+import static org.mockito.Mockito.mock;
+
+import org.apache.cayenne.access.Transaction;
+import org.apache.cayenne.configuration.CayenneRuntime;
+import org.apache.cayenne.configuration.server.ServerRuntime;
+import org.apache.cayenne.di.Inject;
+import org.apache.cayenne.unit.di.server.ServerCase;
+import org.apache.cayenne.unit.di.server.UseServerRuntime;
+
+@UseServerRuntime(ServerCase.TESTMAP_PROJECT)
+public class DefaultTransactionManagerTest extends ServerCase {
+
+    @Inject
+    private ServerRuntime runtime;
+
+    public void testPerformInTransaction_NoTx() {
+        DefaultTransactionManager txManager = new DefaultTransactionManager(runtime);
+
+        final Object expectedResult = new Object();
+        Object result = txManager.performInTransaction(new TransactionalOperation<Object>() {
+            public Object perform(CayenneRuntime runtime) {
+                assertNotNull(Transaction.getThreadTransaction());
+                return expectedResult;
+            }
+        });
+
+        assertSame(expectedResult, result);
+    }
+
+    public void testPerformInTransaction_ExistingTx() {
+        DefaultTransactionManager txManager = new DefaultTransactionManager(runtime);
+
+        final Transaction tx = mock(Transaction.class);
+        Transaction.bindThreadTransaction(tx);
+        try {
+
+            final Object expectedResult = new Object();
+            Object result = txManager.performInTransaction(new TransactionalOperation<Object>() {
+                public Object perform(CayenneRuntime runtime) {
+                    assertSame(tx, Transaction.getThreadTransaction());
+                    return expectedResult;
+                }
+            });
+
+            assertSame(expectedResult, result);
+        } finally {
+            Transaction.bindThreadTransaction(null);
+        }
+    }
+}
