@@ -36,6 +36,7 @@ CAY-1768 cdbimport improvements: DataMap "project-version" attribute is skipped 
 CAY-1769 cdbimport improvements: meaningfulPk flag must be turned into a pattern
 CAY-1771 cdbimport improvements: "usePrimitives" flag
 CAY-1772 Real support for DbEntity catalogs
+CAY-1778 TransactionManager to simplify user-managed transactions 
 
 Bug Fixes:
 
